; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_cpuset.c_cpuset_sprintf_cpulist.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_cpuset.c_cpuset_sprintf_cpulist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cpuset = type { i32 }

@callback_mutex = common dso_local global i32 0, align 4
@PAGE_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.cpuset*)* @cpuset_sprintf_cpulist to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cpuset_sprintf_cpulist(i8* %0, %struct.cpuset* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.cpuset*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store %struct.cpuset* %1, %struct.cpuset** %4, align 8
  %6 = call i32 @mutex_lock(i32* @callback_mutex)
  %7 = load i8*, i8** %3, align 8
  %8 = load i32, i32* @PAGE_SIZE, align 4
  %9 = load %struct.cpuset*, %struct.cpuset** %4, align 8
  %10 = getelementptr inbounds %struct.cpuset, %struct.cpuset* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @cpulist_scnprintf(i8* %7, i32 %8, i32 %11)
  store i32 %12, i32* %5, align 4
  %13 = call i32 @mutex_unlock(i32* @callback_mutex)
  %14 = load i32, i32* %5, align 4
  ret i32 %14
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @cpulist_scnprintf(i8*, i32, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
